public class PersonalWatercraft extends Powerboat {

    public int numberOfPassengers;
    public int topSpeed;

    public PersonalWatercraft(String stateRegistrationNO, double boatLength, String manufactor, int year,
                                int numberEngines, String[] fuelType) {
        super(stateRegistrationNO, boatLength, manufactor, year, numberEngines, fuelType);
        // TODO Auto-generated constructor stub
    }
    
}